# demo-ai-basic

./: .env_temp  .gitignore  README.md  config.py  pyproject.toml  requirements.txt
agent/func_call/: llm_stream_weather.py  llm_weather.py
agent/re_act/: func_call_weather.py  weather.py
agent/simple/: weather.py
cases/search/: ai_inner_search_tools.py  search_browser_use.py
docs/: AI领域的基础名词.md  Coder视角的AI应用.md  LLM与Agent应用.md
langchain/agent/func_call/: llm_weather.py
langchain/agent/re_act/: func_call_weather.py  weather.py
langchain/agent/react/: llm_weather.py
langchain/agent/tool_use_router/: llm_mcp.py  llm_weather.py
langchain/chat/: chat.py  stream.py
langchain/func_call/: llm_weather.py
langchain/mcp/react/: chrome.py
langchain/react/: llm_mcp_react.py
llm/: deepseekv4_chat.py  ollama_stream_chat.py  openai_chat.py
llm/ollama/: gemini_chat.py
mcp/: calculator.py  weather.py
mcp/demo/: agent_run_mcp.py  sum.py
mcp/markert/: benborla_mysql.py  chrome-devtools-mcp.py  chrome_devtools_mcp.py  chrome_devtools_mcp_screenshot.py  fetch.py  searxng.py
mcp/use/: llm_call_weather.py  llm_mcp_aggr.py  llm_mcp_react.py  run_mcp_calculator.py
ollama/: ollama_chat.py  ollama_embed.py  openai_chat.py  openai_chat_simple.py
