[project]
name = "demo-ai-basic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "browser-use>=0.5.9",
    "google-genai>=2.0.0",
    "langchain>=1.2.17",
    "langchain-core>=1.3.3",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.1.9",
    "mcp==1.26.0",
    "ollama==0.6.1",
    "openai==2.16.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
]
